--- a/Safejumper/Base.lproj/Main.storyboard
+++ b/Safejumper/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="7rw-07-Uv0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8187.4" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="7rw-07-Uv0">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8151.3"/>
     </dependencies>
     <scenes>
         <!--Authentication View Controller-->
@@ -291,7 +292,7 @@
         <scene sceneID="EDF-49-03M">
             <objects>
                 <viewController id="8jN-4o-zhK" customClass="ImportViewController" customModule="Safejumper" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="FRK-XO-1IU">
+                    <view key="view" tag="3" contentMode="scaleToFill" id="FRK-XO-1IU">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -374,7 +375,7 @@
         <scene sceneID="jzP-Gs-h9q">
             <objects>
                 <viewController id="6Yt-9v-lck" customClass="PanelViewController" customModule="Safejumper" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" tag="3" contentMode="scaleToFill" id="LQl-fl-iUb">
+                    <view key="view" tag="4" contentMode="scaleToFill" id="LQl-fl-iUb">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="431"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -422,9 +423,4 @@
         <image name="top_bar.png" width="320" height="54"/>
         <image name="user.png" width="19" height="18"/>
     </resources>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
 </document>
